Fix the wrong margin map variable call

--- a/css/default-ui.css
+++ b/css/default-ui.css
@@ -560,6 +560,8 @@ textarea {
 
 .center-self {
   display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 15px;
 }
 
