--- a/sass/_aesthetics.scss
+++ b/sass/_aesthetics.scss
@@ -103,8 +103,8 @@
 
 .center-self {
     display: inline-block;
-    margin-left: margin(auto);
-    margin-right: margin(auto);
+    margin-left: margin(desktop);
+    margin-right: margin(desktop);
     margin-bottom: margin(float) * 1.5;
 }
 
